syntax = 'proto3';

import "common.message.proto";
import "property.models.proto";

message QueryCategoryRequest {
    QueryBuilder queryBuilder = 1;
    optional string search = 2;
    optional string organizationId = 3;
    optional bool includeVoided = 4;
}

message QueryCategoryResponse {
    repeated Category data = 1;
    map<string, string> metadata = 2; 
}

message CreateCategoryRequest {
    QueryBuilder queryBuilder = 1;
    string name = 2;
    optional string organizationId = 3;
    Icon icon = 4;
}
message UpdateCategoryRequest {
    QueryBuilder queryBuilder = 1;
    optional string name = 2;
    optional Icon icon = 3;
    string id = 4;
}
message GetCategoryRequest {
    QueryBuilder queryBuilder = 1;
    string id = 2;
}
message GetCategoryResponse {
    Category data = 1;
    map<string, string> metadata = 2; 
}
message DeleteCategoryRequest {
    QueryBuilder queryBuilder = 1;
    string id = 2;
    optional bool purge = 3;
}